--- a/style.css
+++ b/style.css
@@ -97,8 +97,7 @@ footer{
 }
 
 main{
-	width: 940px;
-	margin: 0 auto;
+	
 }
 
 form{
@@ -167,6 +166,13 @@ td, th{
 	clear: left;
 }
 
+.principal{
+	padding: 3em 0;
+	background: #FEFEFE;
+	width: 940px;
+	margin: 0 auto;
+}
+
 .principal p{
 	margin-bottom: 1em;
 }
@@ -187,6 +193,12 @@ td, th{
 
 .mapa{
 	padding: 3em 0;
+	background: linear-gradient(#FEFEFE, #888888);
+}
+
+.mapa-conteudo{
+	width: 940px;
+	margin: 0 auto;
 }
 
 .mapa p{
@@ -196,6 +208,7 @@ td, th{
 
 .beneficios{
 	padding: 3em 0;
+	background: #888888;
 }
 
 .conteudo-beneficios{
@@ -215,6 +228,10 @@ td, th{
 
 .itens:first-child{
 	font-weight: bold;
+}
+
+.itens:before{
+	content: "🟊"
 }
 
 .imagem-beneficios{
