--- a/Parte 4/style.css
+++ b/Parte 4/style.css
@@ -1,31 +1,30 @@
-body{
+body {
 	font-family: 'Montserrat', sans-serif;
 }
 
-header{
+header {
 	background: #BBBBBB;
 	padding: 20px 0;
 }
 
-.caixa{
+.caixa {
 	position: relative;
 	width: 940px;
 	margin: 0 auto;
 }
 
-nav{
+nav {
 	position: absolute;
 	top: 110px;
 	right: 0;
-
 }
 
-nav li{
+nav li {
 	display: inline;
 	margin: 0 0 0 15px;
 }
 
-nav a{
+nav a {
 	text-transform: uppercase;
 	color: #000000;
 	font-weight: bold;
@@ -33,19 +32,18 @@ nav a{
 	text-decoration: none;
 }
 
-nav a:hover{
+nav a:hover {
 	color: #C78C19;
 	text-decoration: underline;
 }
 
-.produtos{
+.produtos {
 	width: 940px;
 	margin: 0 auto;
 	padding: 50px 0;
-	
 }
 
-.produtos li{
+.produtos li {
 	display: inline-block;
 	text-align: center;
 	width: 30%;
@@ -57,72 +55,72 @@ nav a:hover{
 	border-radius: 10px;
 }
 
-.produtos li:hover{
+.produtos li:hover {
 	border-color: #C78C19;
 }
 
-.produtos li:active{
+.produtos li:active {
 	border-color: #088C19;	
 }
 
-.produtos li:hover h2{
+.produtos li:hover h2 {
 	font-size: 34px;
 }
 
-.produtos h2{
+.produtos h2 {
 	font-size: 30px;
 	font-weight: bold;
 }
 
-.produto-descricao{
+.produto-descricao {
 	font-size: 18px;
 }
 
-.produto-preco{
+.produto-preco {
 	font-size: 22px;
 	font-weight: bold;
 	margin-top: 10px;
 }
 
-footer{
+footer {
 	text-align: center;
 	background: url("bg.jpg");
 	padding: 40px 0;
 }
 
-.copyright{
+.copyright {
 	color: #FFFFFF;
 	font-size: 13px;
-	margin-top: 20px;
+	margin: 20px 0 0;
 }
 
-main{
+main {
 	
 }
 
-form{
+form {
 	margin: 40px 0;
 }
 
-form label, form legend{
-	display: block;
+form label, form legend {
+	display:block;
 	font-size: 20px;
 	margin: 0 0 10px;
 }
 
-.input-padrao{
+.input-padrao {
 	display: block;
 	margin: 0 0 20px;
 	padding: 10px 25px;
 	width: 50%;
 }
 
-.checkbox{
+.checkbox {
 	margin: 20px 0;
 }
 
-.enviar{
-	width: 40%;
+.enviar {
+	width:40%;
 	padding: 15px 0;
 	background: orange;
 	color: white;
@@ -134,137 +132,137 @@ form label, form legend{
 	cursor: pointer;
 }
 
-.enviar:hover{
+.enviar:hover {
 	background: darkorange;
-	transform: scale(1.1);
+	transform: scale(1.2);
 }
 
-table{
-	margin: 20px 40px;
+table {
+	margin: 20px 0 40px;
 }
 
-thead{
+thead {
 	background: #555555;
 	color: white;
 	font-weight: bold;
 }
 
-td, th{
+td, th {
 	border: 1px solid #000000;
 	padding: 8px 15px;
 }
 
-/* css da página inicial*/
-.banner{
-	width: 100%;
+
+/* css da página inicial */
+.banner {
+	width:100%;
 }
 
-.titulo-principal{
+.titulo-principal {
 	text-align: center;
 	font-size: 2em;
-	margin-bottom: 1em;
+	margin: 0 0 1em;
 	clear: left;
 }
 
-.principal{
+.principal {
 	padding: 3em 0;
 	background: #FEFEFE;
 	width: 940px;
 	margin: 0 auto;
 }
 
-.principal p{
-	margin-bottom: 1em;
+.principal p {
+	margin: 0 0 1em;
 }
 
-.principal strong{
+.principal strong {
 	font-weight: bold;
 }
 
-.principal em{
+.principal em {
 	font-style: italic;
 }
 
-.utensilios{
+.utensilios {
 	width: 120px;
 	float: left;
 	margin: 0 20px 20px 0;
 }
 
-.mapa{
+.mapa {
 	padding: 3em 0;
 	background: linear-gradient(#FEFEFE, #888888);
 }
 
-.mapa-conteudo{
+.mapa-conteudo {
 	width: 940px;
 	margin: 0 auto;
 }
 
-.mapa p{
+.mapa p {
 	margin: 0 0 2em;
 	text-align: center;
 }
 
-.beneficios{
+.beneficios {
 	padding: 3em 0;
 	background: #888888;
 }
 
-.conteudo-beneficios{
+.conteudo-beneficios {
 	width: 640px;
 	margin: 0 auto;
 }
 
-.lista-beneficios{
+.lista-beneficios {
 	width: 40%;
 	display: inline-block;
 	vertical-align: top;
 }
 
-.itens{
-	line-height: 1.5em;
+.itens {
+	line-height: 1.5;
 }
 
-.itens:first-child{
+.itens:first-child {
 	font-weight: bold;
 }
 
-.itens:before{
-	content: "🟊"
+.itens:before {
+	content: "🟊";
 }
 
-.imagem-beneficios{
+.imagem-beneficios {
 	width: 60%;
 	opacity: 1;
 	transition: 400ms;
-	box-shadow: 10px 10px 15px #000000;
+	box-shadow: 10px 10px 10px 0 #000000;
 }
 
-.imagem-beneficios:hover{
+.imagem-beneficios:hover {
 	opacity: 0.3;
 }
 
-.video{
+.video {
 	width: 560px;
 	margin: 2em auto;
 }
 
 @media screen and (max-width: 480px) {
-	.caixa, .principal, .conteudo-beneficios, .mapa-conteudo, .video{
+	.caixa, .principal, .conteudo-beneficios, .mapa-conteudo, .video {
 		width: auto;
 	}
 
-	h1{
+	h1 {
 		text-align: center;
 	}
 
-	nav{
+	nav {
 		position: static;
 	}
 
-	.lista-beneficios, .imagem-beneficios{
+	.lista-beneficios, .imagem-beneficios {
 		width: 100%;
 	}
-
 }
